Add README file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="favicon.ico">
 </head>
 
-<body>
+<body class="disable-select">
   <h1 id="level-title">Press Any Key to Start</h1>
   <div class="container">
     <div lass="row">
